# Chess-Game

./: Cargo.toml
benches/: chess_benchmark.rs
src/: enums.rs  helper.rs  lib.rs  main.rs  strucs.rs  structs.rs  traits.rs
src/components/: chess_board_component.rs  header_component.rs  mod.rs  mode_choice_component.rs
src/tests/: mod.rs  ticker_tests.rs
src/utils/: chess_rules.rs  mod.rs  movement_controller.rs  movement_patterns.rs  movement_types.rs  ticker.rs
