[package]
name = "Chess-Game"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.29.1"
image = { version = "0.25.2", features = ["png", "jpeg"] }
egui_extras = { version = "0.29.1", features = ["all_loaders"] }
duration-string = { version = "0.4.0" }

[dependencies.uuid]
version = "1.10.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[dev-dependencies]
divan = "0.1.14"

[[bench]]
name = "chess_benchmark"
harness = false
